@@ -1,0 +1,30 @@
+/* XPM */
+static char * status_here_xpm[] = {
+"16 16 10 1",
+"       c None",
+".      c #C0C0C0",
+"+      c #000000",
+"@      c #808000",
+"#      c #FFFF00",
+"$      c #FFFFFF",
+"%      c #000080",
+"&      c #808080",
+"*      c #800000",
+"=      c #FF0000",
+"                ",
+"     ......     ",
+"   ...++@@...   ",
+"  ..++####@@..  ",
+"  .+##$$$$#$@.  ",
+" ..+#$$$####@.. ",
+" .+#$$%$#%$##@. ",
+" .+#$.&..&.##@. ",
+" .+##########@. ",
+" .+##*####=##@. ",
+" ..+##*==*##@.. ",
+"  .+########@.  ",
+"  ..++#$$#@@..  ",
+"   ...+++@...   ",
+"     ......     ",
+"                "};
+
