@@ -1,0 +1,31 @@
+/* XPM */
+static char * status_idle_xpm[] = {
+"17 17 11 1",
+" 	c None",
+".	c #FFFFFF",
+"+	c #FFFF00",
+"@	c #C6C3C6",
+"#	c #848284",
+"$	c #848200",
+"%	c #840084",
+"&	c #00FFFF",
+"*	c #0000FF",
+"=	c #000084",
+"-	c #000000",
+"                 ",
+"      @@@@@@     ",
+"    @@@--$$@@@   ",
+"   @@--++++$$@@  ",
+"   @-++....+.$@  ",
+"  @@-+...++++$@@ ",
+"  @-+..=.+=.++$@ ",
+"  @-+.@#@@#@++$@ ",
+"  @-**=+++++++$@ ",
+" @=&&#&=+++$++$@ ",
+" =&@.-.&=$$++$@@ ",
+" =&..=.&=++++$@  ",
+" =&-$=.@=.+$$@@  ",
+" =&.@.@&%-$@@@   ",
+" @=&&&&%@@@@     ",
+"  @%%%%@         ",
+"                 "};
